# dotvault

./: .gitignore  Cargo.toml  README.md  SCENARIO.md  demo.mjs  docker-compose.test.yml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
crates/dotvault/: Cargo.toml
crates/dotvault/src/: add.rs  config.rs  export.rs  main.rs  resolve.rs  run.rs  set.rs  status.rs  validate.rs
crates/dotvault/tests/: e2e_errors.rs  e2e_export.rs  e2e_init.rs  e2e_run.rs  e2e_status.rs  e2e_validate.rs
crates/secret-resolvers/: Cargo.toml
crates/secret-resolvers/src/: age.rs  aws.rs  env.rs  gcp.rs  hashicorp.rs  keychain.rs  keyzero.rs  lib.rs  onepassword.rs  provider.rs
crates/secret-resolvers/tests/: integration_age.rs  integration_aws.rs  integration_env.rs  integration_gcp.rs  integration_hashicorp.rs  integration_keychain.rs  integration_keyzero.rs  integration_onepassword.rs
docs/superpowers/plans/: 2026-03-18-dotvault-implementation.md
docs/superpowers/specs/: 2026-03-18-dotvault-design.md
npm/cli-darwin-arm64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-x64/: package.json
npm/dotvault/: package.json
scripts/: bump-version.sh
shell/: hook.bash  hook.fish  hook.zsh
site/: index.html
skills/dotvault/: SKILL.md
skills/dotvault-run/: SKILL.md
xtask/src/: main.rs
