[package]
name = "dotvault"
version = "0.4.0"
edition = "2021"
description = "Resolve secrets from pluggable backends into your dev environment"
license = "MIT"
repository = "https://github.com/jondot/dotvault"
homepage = "https://github.com/jondot/dotvault"
readme = "../../README.md"
keywords = ["secrets", "vault", "env", "dotenv", "credentials"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "dv"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[dependencies]
secret-resolvers = { version = "0.4.0", path = "../secret-resolvers", features = ["all"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dirs = "6"
anyhow = "1"
futures = "0.3"
dialoguer = "0.11"
toml_edit = "0.22"
